- Keine relevanten Ändeurngen

--- a/app/templates/form_meetingcreation.html
+++ b/app/templates/form_meetingcreation.html
@@ -15,12 +15,7 @@
                 <div class="form-group">
                     <label class="control-label col-lg-2">Start:</label>
                     <div class="col-lg-10">
-                        <div id="datetimepicker1" class="input-append date">
-                            <input id="start" class="form-control" type="text" data-format="dd/MM/yyyy hh:mm:ss">
-                            <span class="add-on">
-                                <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-                            </span>
-                        </div>
+                        <input id="start" class="form-control" type="text">
                     </div>
                 </div>
             </form>
