--- a/app/templates/templ_meetingpanel.html
+++ b/app/templates/templ_meetingpanel.html
@@ -14,8 +14,8 @@
                 {{meeting.title}}
             </div>
             <div class="col-lg-1">
-                <i class="fa fa-pencil fa-lg"></i>
-                <i class="fa fa-close fa-lg"></i>
+                <a class="mtp-panel-icon-link" href="#"><i class="fa fa-pencil fa-lg mtp-panel-icon"></i></a>
+                <a class="mtp-panel-icon-link" href="#"><i class="fa fa-close fa-lg mtp-panel-icon"></i></a>
             </div>
             <div class="col-lg-1">
                 <i class="fa fa-chevron-down fa-lg"></i>
