--- a/app/templates/form_meetingcreation.html
+++ b/app/templates/form_meetingcreation.html
@@ -13,9 +13,25 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-lg-2">Start:</label>
+                    <label class="control-label col-lg-2">Beginn:</label>
                     <div class="col-lg-10">
-                        <input id="start" class="form-control" type="text">
+                        <div class='input-group date datetimepicker'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2">Ende:</label>
+                    <div class="col-lg-10">
+                        <div class='input-group date datetimepicker'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </form>
