--- a/app/templates/form_meetingcreation.html
+++ b/app/templates/form_meetingcreation.html
@@ -1,40 +1,98 @@
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
         <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" class="close mtp-close" data-dismiss="modal">&times;</button>
             <h4 class="modal-title">Sprechstunde anlegen</h4>
         </div>
         <div class="modal-body">
             <form class="form-horizontal" ng-controller="CreationFormController" ng-submit="creationFormEventHandler.submit()">
                 <div class="form-group">
-                    <label class="control-label col-lg-2">Titel:</label>
+                    <label class="control-label col-lg-2" for="title">Titel:</label>
                     <div class="col-lg-10">
-                        <input id="title" class="form-control" type="text" placeholder="Halo i bims 1 Welt!">
+                        <input id="title" class="form-control" type="text" placeholder="Welchen Titel soll die Sprechstunde tragen?">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-lg-2">Beginn:</label>
+                    <label class="control-label col-lg-2" for="start">Beginn:</label>
                     <div class="col-lg-10">
-                        <div class='input-group date datetimepicker'>
-                            <input type='text' class="form-control" />
+                        <div class="input-group date datetimepicker">
                             <span class="input-group-addon">
                                 <span class="fa fa-calendar"></span>
                             </span>
+                            <input id="start" class="form-control" type="text" placeholder="Wann soll die Sprechstunde beginnen?">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-lg-2">Ende:</label>
+                    <label class="control-label col-lg-2" for="end">Ende:</label>
                     <div class="col-lg-10">
-                        <div class='input-group date datetimepicker'>
-                            <input type='text' class="form-control" />
+                        <div class="input-group date datetimepicker">
                             <span class="input-group-addon">
                                 <span class="fa fa-calendar"></span>
                             </span>
+                            <input id="end" class="form-control" type="text" placeholder="Wann soll die Sprechstunde enden?">
                         </div>
                     </div>
                 </div>
-
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="last_enrollment">Anmeldeende:</label>
+                    <div class="col-lg-10">
+                        <div class="input-group date datetimepicker">
+                            <span class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </span>
+                            <input id="last_enrollment" class="form-control" type="text" placeholder="Ab wann soll sich niemand mehr an der Sprechstunde anmelden können?">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="room">Raum:</label>
+                    <div class="col-lg-10">
+                        <input id="room" class="form-control" type="text" placeholder="In welchem Raum soll die Sprechstunde stattfinden?">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="hasSLots">Sloteinteilung:</label>
+                    <div class="col-lg-10">
+                        <input id="hasSlots" class="checkbox-inline mtp-checkbox" type="checkbox" value="hasSlots" checked>
+                        <a href="#" data-toggle="tooltip" data-placement="right" title="Soll eine Einteilung der Sprechstundendauer in einzeln belegbare Slots stattfinden?">
+                            <div class="badge">?</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="slots">Slotanzahl:</label>
+                    <div class="col-lg-10">
+                        <input id="slots" class="form-control" type="text" placeholder="In wie viele Slots soll die Sprechstunde aufgeteilt werden?">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="max_participants">Max. Teilnehmer:</label>
+                    <div class="col-lg-10">
+                        <input id="max_participants" class="form-control" type="text" placeholder="Wie viele Studierende sollen an der Sprechstunde teilnehmen können?">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="email_notification_docent">Emailnotifikation:</label>
+                    <div class="col-lg-10">
+                        <input id="email_notification_docent" class="checkbox-inline mtp-checkbox" type="checkbox" value="email_notification_docent">
+                        <a href="#" data-toggle="tooltip" data-placement="right" title="Soll bei An-/Abmeldungen eine Benachrichtigung per Email erfolgen?">
+                            <div class="badge">?</div>
+                        </a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="description_public">Öffentliche Beschreibung:</label>
+                    <div class="col-lg-10">
+                        <textarea id="description_public" class="form-control" rows="5" placeholder="Soll eine Beschreibung verfasst werden, die für alle Benutzer einsehbar ist?"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-lg-2" for="description_private">Private Beschreibung:</label>
+                    <div class="col-lg-10">
+                        <textarea id="description_private" class="form-control" rows="5" placeholder="Soll eine Beschreibung verfasst werden, die nur für Sie einsehbar ist?"></textarea>
+                    </div>
+                </div>
             </form>
         </div>
         <div class="modal-footer">
