Feature: viewdocent - creationform - Logik zu Abhängigkeiten in Anzeige des Forms aufgrund von Inkompatibilitäten zwischen AngularJS und JQuery angepasst

--- a/app/view-docent/validation.css
+++ b/app/view-docent/validation.css
@@ -73,6 +73,7 @@ input:focus, input:focus.ng-touched.ng-invalid:not(.ng-valid), textarea:focus, t
 input.ng-valid-required.ng-valid:not(.ng-invalid), textarea.ng-valid-required.ng-valid:not(.ng-invalid), select.ng-valid-required.ng-valid:not(.ng-invalid) {
   border-color: #2ECC71; }
 
+/*
 form[class*="ng-invalid"] button.btn[type=submit] {
   background: #3498DB;
   transition: none; }
@@ -80,3 +81,4 @@ form[class*="ng-invalid"] button.btn[type=submit] {
 form button.btn[type=submit] {
   transition: all ease-in 0.5s;
   background: #2ECC71; }
+*/
