--- a/app/templates/form_meetingcreation.html
+++ b/app/templates/form_meetingcreation.html
@@ -114,7 +114,7 @@
                     <div class="col-lg-9">
                         <textarea id="description" class="form-control" rows="5"
                                   placeholder="Soll die Sprechstunde(nserie) näher beschrieben werden?"
-                                  ng-model="newMeeting.description_public"></textarea>
+                                  ng-model="newMeeting.description"></textarea>
                     </div>
                 </div>
             </div>
